# hydro-bench

./: .gitignore  README.md  requirements.txt  setup.sh
Aker/: .gitignore  README.md  setup.py
Aker/aker/: __init__.py  __main__.py  cli.py
Aker/aker/gpu/: __init__.py  broker.py  client.py  worker_cli.py
Aker/aker/infra/: __init__.py  backend.py  claude.py  codex.py  locks.py
Aker/aker/phases/: __init__.py  bootstrap.py  hydro.py  iterate.py  review_loop.py  spec.py
Aker/aker/prompts/: bootstrap_reviewer.md  bootstrap_reviewer_recheck.md  bootstrap_worker.md  bootstrap_worker_fix.md  hydro_iterate_reviewer.md  hydro_iterate_reviewer_recheck.md  iterate_worker.md  (+6 more)
Aker/dev/: idea.md  parallel.md  plan.md
Aker/examples/: fp8_nvfp4_cast.md
Aker/tests/: test_bootstrap.py  test_broker.py  test_claude_backend.py  test_codex.py  test_iterate.py  test_leaderboard.py  test_reservation.py  test_spec.py
cuda_impl/: F1_driver.cu  F1_persistent_bench.cu  F2_driver.cu  F2_persistent_bench.cu
cuda_native_impl/: benchmark.cu  build.sh
cuda_native_impl/F1_fp32_native_data/: BINFOR  BOUNDE  SOURCES
cuda_native_impl/F2_24K_native_data/: BOUNDE
cuda_native_impl/fp32_src/: benchmark.cu  build.sh
hydro-cal/: .gitignore  HYDRO_CAL_OVERVIEW.md  README.md
hydro-cal/SOURCE/: CMakeLists.txt
hydro-cal/SOURCE/doc/: hy.md
hydro-cal/SOURCE/include/: functors.cuh
hydro-cal/SOURCE/include/mesh/: mesh.hpp
hydro-cal/SOURCE/src/: functors.cu  main.cpp  mesh.cpp  side.cpp
results/: correctness_8case_summary.txt  ncu_results.jsonl  performance_8case_summary.txt
results/alignment/: SUMMARY.md
scripts/: ALIGNMENT_PLAN.md  alignment_plan.md  check_correctness.py  check_native_alignment.py  compare.py  compare_output_files.py  plot_drift_curve.py  run_aker_hydro_direct.sh  run_aker_hydro_relaxed.sh  run_alignment_full.sh  run_benchmark.sh  run_cuda.sh  run_native_cuda.sh  run_ncu.sh  run_ncu_sweep.sh  run_taichi.py  slurm_aker_hydro_run.sbatch  slurm_native_alignment.sbatch  submit_aker_hydro_run.sh  submit_native_alignment.sh  validate_alignment_json.py
scripts/diag/: FMA_ROOT_CAUSE.md  POW_ROUNDING_FINDINGS.md  _fma_flag_worker.py  _fma_ir_dump_worker.py  probe_207k_divergence.py  probe_f1_207k_fp32_step1.py  probe_f1_6.7k_divergence.py  probe_f1_6.7k_divergence_round4_output.txt  probe_f1_6.7k_divergence_round5_fine_output.txt  probe_f1_6.7k_divergence_round5_output.txt  probe_f1_6.7k_step_trigger.py  probe_f2_207k_naninf.py  probe_fi_parity.py  probe_fp64_op_alignment.py  probe_loader_geometry.py  probe_osher_cell.py  probe_pow15_ptx_signature.sh  probe_pow_fp64_taichi_vs_nvcc.py  probe_taichi_fma_flags.py
slides/: hydro_207k_report.html
taichi_impl/: F1_hydro_taichi_2kernel_fp32.py  F1_hydro_taichi_2kernel_fp64.py  F2_hydro_taichi_fp32.py  F2_hydro_taichi_fp64.py  mesh_loader_f1.py  mesh_loader_f2.py  output_writer.py
(+269 files in other folders)
